fix(head): unwrap chips lapel on find a roofer page

--- a/applications/head/src/components/styles/ServiceLocatorSection.module.scss
+++ b/applications/head/src/components/styles/ServiceLocatorSection.module.scss
@@ -62,8 +62,12 @@
 
   .filters {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: flex-end;
+
+    .no-wrap {
+      flex-shrink: 0;
+    }
 
     .chips {
       margin-left: 19px;
